mutants.out.old/log/src__main.rs_line_104_col_9.log

*** src/main.rs:104:9: replace <impl Serializer for Point>::serialize -> Object with Default::default()

*** mutation diff:
--- src/main.rs
+++ replace <impl Serializer for Point>::serialize -> Object with Default::default()
@@ -96,22 +96,17 @@
 {
     fn fmt(&self, f: &mut Formatter<'_>) -> std::fmt::Result {
         Display::fmt(self, f)
     }
 }
 
 impl Serializer<Object> for Point {
     fn serialize(&self) -> Object {
-        let mut point = Object::new();
-
-        point.insert("x", JsonValue::Number(self.x.into()));
-        point.insert("y", JsonValue::Number(self.y.into()));
-
-        point
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl Deserializer<Object> for Point {
     fn deserialize(document: &Object) -> Result<Self, String> {
         let mut point = Point { x: 0.0, y: 0.0 };
 
         if let Some(x) = document.get("x") {


*** \\\\?\\C:\\Users\\stefa\\.rustup\\toolchains\\stable-x86_64-pc-windows-msvc\\bin\\cargo.exe build --tests --manifest-path C:\\Users\\stefa\\AppData\\Local\\Temp\\cargo-mutants-TSS-Proj-vtQfAN.tmp\\Cargo.toml
   Compiling TSS-Proj v0.1.0 (C:\Users\stefa\AppData\Local\Temp\cargo-mutants-TSS-Proj-vtQfAN.tmp)
error[E0277]: the trait bound `json::object::Object: Default` is not satisfied
   --> src\main.rs:104:9
    |
104 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `json::object::Object`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `TSS-Proj` (bin "TSS-Proj" test) due to 1 previous error

*** result: Failure(101)
